conformance/tests/basic/inferencepool_invalid_epp_service.yaml
apiVersion: inference.networking.x-k8s.io/v1alpha2
kind: InferencePool
metadata:
  name: pool-with-invalid-epp
  namespace: gateway-conformance-app-backend
spec:
  selector:
    app: "inference-model-1"
  targetPortNumber: 3000
  extensionRef:
    name: non-existent-epp-svc
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-for-invalid-epp-pool
  namespace: gateway-conformance-app-backend
spec:
  parentRefs:
  - name: conformance-gateway
    namespace: gateway-conformance-infra
  rules:
  - backendRefs:
    - name: pool-with-invalid-epp
      kind: InferencePool
      group: inference.networking.x-k8s.io
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /invalid-epp-test
